@@ -15,10 +15,9 @@ import org.jetbrains.annotations.NotNull;
 import org.junit.jupiter.api.TestInfo;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.testcontainers.containers.GenericContainer;
+import org.testcontainers.containers.MongoDBContainer;
 import org.testcontainers.containers.Network;
 import org.testcontainers.containers.ToxiproxyContainer;
-import org.testcontainers.images.builder.ImageFromDockerfile;
 import org.testcontainers.utility.DockerImageName;
 
 import static com.mongodb.ReadPreference.secondaryPreferred;
@@ -50,15 +49,19 @@ public class MongoService implements Closeable {
 
 	// Expensive stuff shared among instances as much as possible, hence static
 	private static final Network NETWORK = Network.newNetwork();
-	private static final GenericContainer<?> MONGO_CONTAINER = mongoContainer();
-	private static final MongoClientSettings normalClientSettings = mongoClientSettings(new ServerAddress(MONGO_CONTAINER.getHost(), MONGO_CONTAINER.getFirstMappedPort()));
+	private static final MongoDBContainer MONGO_CONTAINER = mongoContainer();
+	private static final MongoClientSettings normalClientSettings = mongoClientSettings(
+		new ServerAddress(MONGO_CONTAINER.getHost(), MONGO_CONTAINER.getFirstMappedPort())
+	);
 
 	private static final ToxiproxyContainer TOXIPROXY_CONTAINER = toxiproxyContainer();
 	private static final ToxiproxyClient TOXIPROXY_CLIENT = createToxiproxyClient();
 
 	private static final Proxy MONGO_PROXY = createMongoProxy();
 	private static final int PROXY_PORT = 8666;
-	private static final MongoClientSettings disruptableClientSettings = mongoClientSettings(new ServerAddress(TOXIPROXY_CONTAINER.getHost(), TOXIPROXY_CONTAINER.getMappedPort(PROXY_PORT)));
+	private static final MongoClientSettings disruptableClientSettings = mongoClientSettings(
+		new ServerAddress(TOXIPROXY_CONTAINER.getHost(), TOXIPROXY_CONTAINER.getMappedPort(PROXY_PORT))
+	);
 
 	private static final String CUT_CONNECTION_DOWNSTREAM = "CUT_CONNECTION_DOWNSTREAM";
 	private static final String CUT_CONNECTION_UPSTREAM = "CUT_CONNECTION_UPSTREAM";
@@ -78,7 +81,7 @@ public class MongoService implements Closeable {
 			MONGO_PROXY.toxics().get(CUT_CONNECTION_UPSTREAM).remove();
 		} catch (IOException e) {
 			// The proxy offers no way to check if a toxic exists,
-			// and no way to remote it without first getting it.
+			// and no way to remove it without first getting it.
 			LOGGER.debug("This can happen if the connection was not already cut; ignoring", e);
 		}
 	}
@@ -96,18 +99,18 @@ public class MongoService implements Closeable {
 		mongoClient.close();
 	}
 
-	private static GenericContainer<?> mongoContainer() {
-		GenericContainer<?> result = new GenericContainer<>(
-			new ImageFromDockerfile().withDockerfileFromBuilder(builder -> builder
-				.from("mongo:7.0")
-				.run("echo \"rs.initiate()\" > /docker-entrypoint-initdb.d/rs-initiate.js")
-				.cmd("mongod", "--replSet", "rsLonesome", "--port", "27017", "--bind_ip_all")
-				.build()))
+	private static MongoDBContainer mongoContainer() {
+		MongoDBContainer container = new MongoDBContainer(DockerImageName.parse("mongo:7.0"))
 			.withTmpFs(Map.of("/data/db", "rw"))
 			.withNetwork(NETWORK)
-			.withExposedPorts(27017);
-		result.start();
-		return result;
+			.withCommand(
+				"mongod",
+				"--replSet", "rsLonesome",
+				"--port", "27017",
+				"--bind_ip_all"
+			);
+		container.start();
+		return container;
 	}
 
 	private static ToxiproxyContainer toxiproxyContainer() {
@@ -131,7 +134,7 @@ public class MongoService implements Closeable {
 			return TOXIPROXY_CLIENT.createProxy(
 				"mongo",
 				"0.0.0.0:" + PROXY_PORT,
-				MONGO_CONTAINER.getNetworkAliases().get(0) + ":27017"
+				MONGO_CONTAINER.getNetworkAliases().getFirst() + ":27017"
 			);
 		} catch (IOException e) {
 			throw new RuntimeException("Failed to create Mongo proxy", e);
@@ -157,5 +160,4 @@ public class MongoService implements Closeable {
 			})
 			.build();
 	}
-
 }
